...

```json
[
  {
    "file": "base.yml",
    "index": 0,
    "triggers": [":hello"],
    "replace": "world",
    "regex": "",
    "label": "示例"
  }
]
```

...
